[tool.poetry]
name = "oplab_notebook"
version = "0.1.0"
description = ""
authors = ["César Vargas <cesar@vargas.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.1"
numpy = "^1.22.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
